# ComfyUI-My-Nodes

./: MANIFEST.in  README.md  TensorAndPil.py  __init__.py  config.json  config.txt  nodes.py  pyproject.toml  requirements.txt
example_workflow/: example.json
example_workflows/: example.json
oss/: oss.py
src/my_nodes/: nodes.py
tests/: __init__.py  test_my_nodes.py
zhipu/: ZhiPuNodes.py  zhipu.py
