[project]
name = "comfyui-my-nodes"
description = "一个支持在ComfyUI中使用阿里百炼模型库（包括Qwen、Omni、Audio、VL、ImageEdit、TTS、Flux等）进行各种提示词反推或提示词创意、翻译、润色及额外一些小工具的插件"
version = "1.3.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Tagbliton/ComfyUI-My-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool]
[tool.comfy]
PublisherId = "tagbliton"
DisplayName = "ComfyUI-My-Nodes"
Icon = ""
